--- a/deploy/demo_bot/Dockerfile
+++ b/deploy/demo_bot/Dockerfile
@@ -6,6 +6,6 @@ RUN apt-get update
 COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENV API_TOKEN="5838296860:AAG8UTY2WVmQ2TDGX6LjWN65cZTYCOGabGI"
+ENV API_TOKEN=""
 
 COPY app.py /app.py
